<resources>
    <string name="app_name">Chorepocalypse</string>
    <string name="action_settings">Settings</string>

    <!--Detail Screen-->
    <string name="detail_chore_picture">Chore Picture</string>
    <string name="detail_total_rewards">Total Rewards: </string>
    <string name="detail_due_string">"Due: "</string>

    <!--shared strings-->
    <string name="reward_value_label">Reward Value:</string>

    <!--Add chore screen-->
    <string name="add_chore_name_hint">Chore Name</string>
    <string name="add_chore_points_hint">Add chore points</string>
    <string name="add_chore_needs_approval">Needs Approval</string>
    <string name="add_chore_button_text">Add Chore</string>
    <string name="add_chore_past_time_text">That\'s in the past silly!</string>
    <string name="add_chore_change_date_text">Change</string>
    <string name="add_chore_alarm_set_for">"Alarm set for "</string>
    <string name="add_chore_at_string">" at "</string>
    <string name="add_chore_due_button_text">Set Deadline</string>
    <string name="add_chore_due_date_text">Chore due by…</string>
    <string name="add_chore_no_due_date">Give that sucker a due date!</string>
    <string name="add_chore_blank_chore_toast">Gotta give yer chore a name!</string>

    <!--pic picker dialog-->
    <string name="pic_picker_camera">Camera</string>
    <string name="pic_picker_gallery">Gallery</string>
    <string name="content_description_photo_picker_button">Photo picker button</string>

    <!--Time picker dialog-->
    <string name="date_picker_title">Chore Due Date…</string>
    <string name="time_picker_title">Chore Due Time…</string>
    <string name="time_picker_cancel_text">Back to Date</string>

    <!--Toasts-->
    <string name="toast_saving_chore">"Saving "</string>
    <string name="toast_chore_added">" added to list!"</string>
    <string name="toast_add_chore_error">No photo added</string>

    <!--Notification strings-->
    <string name="notification_title">Uploading Chore</string>
    <string name="notification_text">"Uploaded "</string>

    <!--full screen alarm activity-->
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="full_screen_got_it_button">OK I get it already!</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="detail_no_chore_points">No points set</string>
    <string name="detail_awaiting_approval">Awaiting Approval</string>
    <string name="detail_approved">APPROVED!!</string>
    <string name="widget_empty_list_text">No Chores to Load Yet!</string>
    <string name="fsd_approved">APPROVED!</string>
    <string name="fsd_awaiting_approval">Awaiting Approval</string>
    <string name="add_chore_select_picture">Select Picture</string>
    <string name="add_chore_choose_image">Choose image using...</string>
    <string name="add_chore_error">Error creating photo file</string>
    <string name="chore_upload_success">Chore uploaded successfully!</string>
    <string name="get_to_work">Now get to work!</string>
    <string name="photo_upload_error_title">Oops- your chore didn\'t uploaded!</string>
    <string name="photo_upload_error_content_text">Please try again</string>
    <string name="detail_approval_status">Approval Status</string>
    <string name="detail_add_a_chore">Add a chore!</string>
    <string name="add_chore_set_deadline">Set deadline</string>
    <string name="add_chore_due_by">Chore due by...</string>
    <string name="complete">Complete</string>
    <string name="no_chores_yet">NO CHORES... YET!</string>
</resources>
