<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorBackgroundDark"
    android:elevation="4dp">

    <EditText
        android:id="@+id/add_chore_name"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_chore_name_hint"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="32sp"
        app:layout_columnSpan="3" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/add_chore_pic"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_chore_name"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/detail_chore_picture"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sink"
        app:layout_column="0"
        app:layout_rowSpan="3"
        app:riv_border_color="@color/colorBackground"
        app:riv_border_width="5dp"
        app:riv_corner_radius="15dp" />

    <ImageButton
        android:id="@+id/add_chore_photo_picker_button"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="144dp"
        android:layout_height="112dp"
        android:layout_below="@id/add_chore_name"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_photo_picker_button"
        android:scaleType="fitXY"
        android:src="@drawable/image_button_state"
        app:srcCompat="@drawable/ic_panorama_56dp" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/add_chore_grid_layout"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@+id/add_chore_name"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/add_chore_pic"
        android:layout_toRightOf="@+id/add_chore_pic"
        app:columnCount="2">

        <Button
            android:id="@+id/chore_due_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set deadline"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/chore_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_chore_needs_approval" />

        <CheckBox
            android:id="@+id/chore_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:checked="true"
            app:layout_columnWeight="1"
            app:layout_gravity="end" />
    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:id="@+id/reward_value_linear_layout"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_chore_pic"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/chore_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_value_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/current_chore_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_chore_points_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/add_chore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reward_value_linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/add_chore_button_text" />

</RelativeLayout>