<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundDark">

    <TextView
        android:id="@+id/full_screen_detail_chore_title"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="32sp"
        tools:text="Clean sink"
        android:gravity="center_horizontal"/>

    <FrameLayout
        android:id="@+id/full_screen_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/full_screen_detail_chore_title"
        android:layout_centerInParent="true">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/full_screen_detail_chore_pic"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/detail_chore_picture"
        android:scaleType="fitXY"
        android:src="@drawable/sink"
        app:riv_border_color="@color/colorBackground"
        app:riv_border_width="5dp"
        app:riv_corner_radius="15dp" />

    <ProgressBar
        android:id="@+id/full_screen_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>
    </FrameLayout>

    <TextView
        android:id="@+id/full_screen_reward_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_screen_frame_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/reward_value_label"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/full_screen_detail_current_chore_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/full_screen_detail_chore_due_date"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:layout_toEndOf="@+id/full_screen_reward_label"
        android:layout_toRightOf="@+id/full_screen_reward_label"
        tools:text="555" />

    <TextView
        android:id="@+id/full_screen_detail_chore_due_date"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_screen_reward_label"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        tools:text="Due: Mon, Dec 26 @ 2pm"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_gravity="left" />

    <TextView
        android:id="@+id/full_screen_detail_chore_status"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_screen_detail_chore_due_date"
        android:layout_marginTop="8dp"
        android:text="@string/detail_approval_status" />

    <TextView
        android:id="@+id/full_screen_approval_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/full_screen_detail_chore_status"
        android:layout_alignBottom="@+id/full_screen_detail_chore_status"
        android:layout_toEndOf="@+id/full_screen_detail_chore_status"
        android:layout_toRightOf="@+id/full_screen_detail_chore_status"
        tools:text="Approved!" />
</RelativeLayout>
</ScrollView>