<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundDark"
    android:elevation="4dp">

    <TextView
        android:id="@+id/detail_chore_title"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Add a chore!"
        app:layout_columnSpan="3" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/detail_chore_pic"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_chore_title"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:maxHeight="144dp"
        android:maxWidth="144dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/detail_chore_picture"
        android:src="@drawable/sink"
        app:layout_column="0"
        app:layout_rowSpan="2"
        app:riv_border_color="@color/colorBackground"
        app:riv_corner_radius="15dp"
        app:riv_border_width="5dp"/>

    <android.support.v7.widget.GridLayout
        android:id="@+id/chore_linear_layout"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/chore_grid_layout"
        android:layout_alignRight="@+id/chore_grid_layout"
        android:layout_below="@+id/detail_chore_pic"
        app:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_value_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_current_chore_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_total_rewards"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/detail_total_chore_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1,525"
            app:layout_columnWeight="1" />
    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/chore_grid_layout"
        style="@style/MaterialDesignHorizontalMargin"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@+id/detail_chore_title"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/detail_chore_pic"
        android:layout_toRightOf="@+id/detail_chore_pic"
        android:elevation="4dp"
        app:columnCount="2">

        <TextView
            android:id="@+id/detail_chore_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="Due: Mon, Dec 26 @ 2pm"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="left" />

        <TextView
            android:id="@+id/detail_chore_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Approved" />

        <CheckBox
            android:id="@+id/detail_chore_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:checked="true"
            app:layout_columnWeight="1"
            app:layout_gravity="left" />
    </android.support.v7.widget.GridLayout>

</RelativeLayout>